🤖 Chore: MSA fe 배포 및 be deployment 설정

--- a/infra/frontend/frontend-v1-app-deploy.yaml
+++ b/infra/frontend/frontend-v1-app-deploy.yaml
@@ -15,9 +15,8 @@ spec:
         app: frontend-v1
     spec:
       containers:
-        - name: frontend
+        - name: frontend-v1
           image: softho0n/frontend-v1-app:latest
-          imagePullPolicy: Always
           ports:
             - containerPort: 80
 ---
