--- a/infra/backend/user-backend-app-deploy.yaml
+++ b/infra/backend/user-backend-app-deploy.yaml
@@ -1,3 +1,26 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: user-backend
+  labels:
+    app: user-backend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: user-backend
+  template:
+    metadata:
+      labels:
+        app: user-backend
+    spec:
+      containers:
+        - name: server
+          image: softho0n/user-backend-app:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 1398
+---
 apiVersion: v1
 kind: Service
 metadata:
