--- a/frontend-v1-app/package.json
+++ b/frontend-v1-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1661.0",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
