--- a/infra/backend/payments-backend-app/payments-backend-app-deploy.yaml
+++ b/infra/backend/payments-backend-app/payments-backend-app-deploy.yaml
@@ -1,3 +1,27 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: payments-backend
+  labels:
+    app: payments-backend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: payments-backend
+  template:
+    metadata:
+      labels:
+        app: payments-backend
+    spec:
+      containers:
+        - name: server
+          image: softho0n/payments-backend-app:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 1398
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: payments-backend-svc
