--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -4,9 +4,13 @@ server {
 
     root /usr/share/nginx/html;
 
-    # alpha-backend-svc에 대한 프록시 설정
     location /api/user/ {
         proxy_pass http://user-backend-svc.default.svc.cluster.local:1398/user/;
+        proxy_http_version 1.1;
+    }
+
+    location /api/payments/ {
+        proxy_pass http://payments-backend-svc.default.svc.cluster.local:1398/payments/;
         proxy_http_version 1.1;
     }
 
