✨ Feat: Edit ImagePullPolicy

--- a/infra/frontend/frontend-v1-app-deploy.yaml
+++ b/infra/frontend/frontend-v1-app-deploy.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: frontend-v1
           image: softho0n/frontend-v1-app:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
 ---
