--- a/payments-backend-app/Dockerfile
+++ b/payments-backend-app/Dockerfile
@@ -3,10 +3,11 @@ FROM python:3.8-slim
 RUN mkdir /tmp/backend
 WORKDIR /tmp/backend
 
-COPY *.py .
-COPY requirements.txt .
+COPY ./ ./
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 EXPOSE 1398
-ENTRYPOINT [ "uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "1398"]
+ENV ENVIRONMENT=prod
+
+ENTRYPOINT ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "1398"]
