--- a/payments-backend-app/config/.env.dev
+++ b/payments-backend-app/config/.env.dev
@@ -1,5 +1,5 @@
-MONGO_DB_HOST=localhost
+MONGO_DB_HOST=127.0.0.1
 MONGO_DB_PORT=27017
 MONGO_DB_USERNAME=localhost
 MONGO_DB_PASSWORD=localhost
-VALIDATE_TOKEN_URL=http://localhost:8000/user/validate_token
+VALIDATE_TOKEN_URL=http://127.0.0.1:8000/user/validate_token
