--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -14,6 +14,11 @@ server {
         proxy_http_version 1.1;
     }
 
+    # location /api/audio-streaming/ {
+    #     proxy_pass http://audio-streaming-backend-svc.default.svc.cluster.local:1398/audio-streaming/;
+    #     proxy_http_version 1.1;
+    # }
+
     location / {
         try_files $uri /index.html;
     }
