--- a/frontend-v1-app/package.json
+++ b/frontend-v1-app/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@mui/styled-engine-sc": "^6.0.2",
     "aws-sdk": "^2.1661.0",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2"
   },
   "devDependencies": {
