--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -19,6 +19,11 @@ server {
     #     proxy_http_version 1.1;
     # }
 
+    # location /api/audio-storage/ {
+    #     proxy_pass http://audio-storage-backend-svc.default.svc.cluster.local:1398/audio-storage/;
+    #     proxy_http_version 1.1;
+    # }
+
     # location /api/subscription/ {
     #     proxy_pass http://subscription-backend-svc.default.svc.cluster.local:1398/subscription/;
     #     proxy_http_version 1.1;
