--- a/audio-storage-backend-app/config/.env.prod
+++ b/audio-storage-backend-app/config/.env.prod
@@ -3,3 +3,4 @@ MONGO_DB_PORT=27017
 MONGO_DB_USERNAME=adminuser
 MONGO_DB_PASSWORD=password123
 VALIDATE_TOKEN_URL=http://user-backend-svc.default.svc.cluster.local:1398/user/validate_token
+BUCKET_NAME='2024-graduation-music'
