--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ payments-backend-app/__pycache__/
 subscription-backend-app/__pycache__/
 # audio-streaming-backend-app/**/__pycache__/*
 audio-streaming-backend-app/__pycache__/
+# audio-streaming-backend-app/**/__pycache__/*
+audio-storage-backend-app/__pycache__/
+graduation-work-*.json
 .DS_Store
