--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ audio-streaming-backend-app/__pycache__/
 audio-storage-backend-app/__pycache__/
 */graduation-work-*.json
 graduation-work-*.json
+backoffice-app/__pycache__/
 .DS_Store
