🤖 Chore: AUDIO_STORAGE_URL 환경 변수 항목 추가

--- a/audio-streaming-backend-app/config/.env.dev
+++ b/audio-streaming-backend-app/config/.env.dev
@@ -3,3 +3,4 @@ MONGO_DB_PORT=27017
 MONGO_DB_USERNAME=localhost
 MONGO_DB_PASSWORD=localhost
 VALIDATE_TOKEN_URL=http://127.0.0.1:8000/user/validate_token
+AUDIO_STORAGE_URL=http://127.0.0.1:8004/audio-storage/get_music
