✨ Feat: FE 인프라 연결 및 유지보수

--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -14,20 +14,20 @@ server {
         proxy_http_version 1.1;
     }
 
-    # location /api/audio-streaming/ {
-    #     proxy_pass http://audio-streaming-backend-svc.default.svc.cluster.local:1398/audio-streaming/;
-    #     proxy_http_version 1.1;
-    # }
+    location /api/audio-streaming/ {
+        proxy_pass http://audio-streaming-backend-svc.default.svc.cluster.local:1398/audio-streaming/;
+        proxy_http_version 1.1;
+    }
 
-    # location /api/audio-storage/ {
-    #     proxy_pass http://audio-storage-backend-svc.default.svc.cluster.local:1398/audio-storage/;
-    #     proxy_http_version 1.1;
-    # }
+    location /api/audio-storage/ {
+        proxy_pass http://audio-storage-backend-svc.default.svc.cluster.local:1398/audio-storage/;
+        proxy_http_version 1.1;
+    }
 
-    # location /api/subscription/ {
-    #     proxy_pass http://subscription-backend-svc.default.svc.cluster.local:1398/subscription/;
-    #     proxy_http_version 1.1;
-    # }
+    location /api/subscription/ {
+        proxy_pass http://subscription-backend-svc.default.svc.cluster.local:1398/subscription/;
+        proxy_http_version 1.1;
+    }
 
     location / {
         try_files $uri /index.html;
