--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,10 @@ payments-backend-app/__pycache__/
 subscription-backend-app/__pycache__/
 # audio-streaming-backend-app/**/__pycache__/*
 audio-streaming-backend-app/__pycache__/
+audio-storage-backend-app/__pycache__/
+*/graduation-work-*.json
+graduation-work-*.json
+backoffice-app/__pycache__/
 .DS_Store
+*.pid
+playground
