--- a/backoffice-app/config/.env.dev
+++ b/backoffice-app/config/.env.dev
@@ -2,4 +2,4 @@ MONGO_DB_HOST=127.0.0.1
 MONGO_DB_PORT=27017
 MONGO_DB_USERNAME=localhost
 MONGO_DB_PASSWORD=localhost
-VALIDATE_TOKEN_URL=http://127.0.0.1:8000/user/validate_token
+BUCKET_NAME=2024-graduation-music
