🤖 Chore: gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ audio-storage-backend-app/__pycache__/
 */graduation-work-*.json
 graduation-work-*.json
 backoffice-app/__pycache__/
+download-backend-app/__pycache__/
 .DS_Store
 *.pid
 playground
