✨ Feat: FE 버그 수정 및 download 서비스 연동

--- a/frontend-v1-app/.env.production
+++ b/frontend-v1-app/.env.production
@@ -3,3 +3,4 @@ NEXT_PUBLIC_PAYMENTS_BACKEND_URL_PREFIX=/api/payments
 NEXT_PUBLIC_AUDIO_STREAMING_BACKEND_URL_PREFIX=/api/audio-streaming
 NEXT_PUBLIC_SUBSCRIPTION_BACKEND_URL_PREFIX=/api/subscription
 NEXT_PUBLIC_AUDIO_STORAGE_BACKEND_URL_PREFIX=/api/audio-storage
+NEXT_PUBLIC_DOWNLOAD_BACKEND_URL_PREFIX=/api/download
