--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -29,6 +29,11 @@ server {
         proxy_http_version 1.1;
     }
 
+    location /api/download/ {
+        proxy_pass http://download-backend-svc.default.svc.cluster.local:1398/download/;
+        proxy_http_version 1.1;
+    }
+
     location / {
         try_files $uri /index.html;
     }
