✨ Feat: search 서비스 연동 및 nginx config 수정

--- a/frontend-v1-app/nginx.conf
+++ b/frontend-v1-app/nginx.conf
@@ -34,6 +34,11 @@ server {
         proxy_http_version 1.1;
     }
 
+    location /api/search/ {
+        proxy_pass http://search-backend-svc.default.svc.cluster.local:1398/search/;
+        proxy_http_version 1.1;
+    }
+
     location / {
         try_files $uri /index.html;
     }
