🤖 Chore: Dockerfile 수정

--- a/servers/spring/user-backend-app-kt/Dockerfile
+++ b/servers/spring/user-backend-app-kt/Dockerfile
@@ -1,6 +1,5 @@
 # 1. 사용할 베이스 이미지
-FROM openjdk:17-jdk-slim AS build
-
+FROM gradle:8.10.2-jdk-alpine AS TEMP_BUILD_IMAGE
 # 2. 작업 디렉토리 생성 및 설정
 WORKDIR /app
 
@@ -12,19 +11,15 @@ COPY settings.gradle.kts ./
 COPY src/ ./src/
 
 # 4. Gradle 빌드
-RUN ./gradlew clean build
+RUN gradle build -x test --parallel --continue > /dev/null 2>&1 || true
+COPY . /app
+RUN gradle clean build --no-daemon
 
-# 5. 최종 이미지 구성
-FROM openjdk:17-jdk-slim
+FROM openjdk:17-jdk-alpine AS FINAL_IMAGE
+WORKDIR /app
 
-# 6. JAR 파일 복사
-COPY --from=build /app/build/libs/*.jar app.jar
-
-# 7. 환경 변수 설정 (기본 포트 설정)
+# 6. 빌드된 JAR 파일 복사
+COPY --from=TEMP_BUILD_IMAGE /app/build/libs/*.jar app.jar
 ENV SPRING_PROFILES_ACTIVE=prod
-ENV SERVER_PORT=8080
-
 EXPOSE 8080
-
-# 8. 애플리케이션 실행
-ENTRYPOINT ["java", "-jar", "/app.jar", "--server.port=${SERVER_PORT}"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
