--- a/infra/servers/backoffice-app/deploy.yaml
+++ b/infra/servers/backoffice-app/deploy.yaml
@@ -16,8 +16,7 @@ spec:
     spec:
       containers:
         - name: streamlit
-          image: softho0n/backoffice-app:latest
-          imagePullPolicy: Always
+          image: softho0n/backoffice-app:v1
           ports:
             - containerPort: 8501
           resources:
@@ -51,4 +50,4 @@ spec:
     - name: streamlit-port
       protocol: TCP
       port: 8501
-      nodePort: 30010
+      nodePort: 32000
