--- a/infra/servers/fastapi/subscription-backend-app/subscription-backend-app-deployment.yaml
+++ b/infra/servers/fastapi/subscription-backend-app/subscription-backend-app-deployment.yaml
@@ -16,7 +16,6 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/subscription-backend-app:latest
-          imagePullPolicy: Always
+          image: softho0n/subscription-backend-app:v1
           ports:
             - containerPort: 1398
