--- a/infra/frontend/frontend-app-service.yaml
+++ b/infra/frontend/frontend-app-service.yaml
@@ -1,12 +1,25 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: frontend-svc
+# spec:
+#   selector:
+#     app: frontend
+#   ports:
+#     - name: http
+#       protocol: TCP
+#       port: 3000
+#       targetPort: 80
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-svc
 spec:
+  type: NodePort
   selector:
     app: frontend
   ports:
     - name: http
       protocol: TCP
-      port: 3000
-      targetPort: 80
+      port: 80
+      nodePort: 32001
