--- a/infra/servers/fastapi/audio-streaming-backend-app/audio-streaming-backend-app-risky-deploy.yaml
+++ b/infra/servers/fastapi/audio-streaming-backend-app/audio-streaming-backend-app-risky-deploy.yaml
@@ -19,7 +19,6 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/audio-streaming-backend-app-risky:latest
-          imagePullPolicy: Always
+          image: softho0n/audio-streaming-backend-app-risky:v1
           ports:
             - containerPort: 1398
