--- a/infra/servers/fastapi/payments-backend-app/payments-backend-app-deploy.yaml
+++ b/infra/servers/fastapi/payments-backend-app/payments-backend-app-deploy.yaml
@@ -16,8 +16,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/payments-backend-app:latest
-          imagePullPolicy: Always
+          image: softho0n/payments-backend-app:v1
           ports:
             - containerPort: 1398
 ---
