--- a/infra/servers/fastapi/search-backend-app/search-backend-app-deployment.yaml
+++ b/infra/servers/fastapi/search-backend-app/search-backend-app-deployment.yaml
@@ -16,8 +16,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/search-backend-app:latest
-          imagePullPolicy: Always
+          image: softho0n/search-backend-app:v1
           ports:
             - containerPort: 1398
           volumeMounts:
