--- a/infra/servers/fastapi/deployment/audio-streaming-backend-app-healthy-deploy.yaml
+++ b/infra/servers/fastapi/deployment/audio-streaming-backend-app-healthy-deploy.yaml
@@ -19,6 +19,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/audio-streaming-backend-app:v1
+          image: softho0n/audio-streaming-backend-app:v5
+          imagePullPolicy: Always
           ports:
             - containerPort: 1398
