--- a/infra/servers/fastapi/deployment/payments-backend-app-deploy.yaml
+++ b/infra/servers/fastapi/deployment/payments-backend-app-deploy.yaml
@@ -16,19 +16,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: softho0n/payments-backend-app:v1
+          image: softho0n/payments-backend-app:v3
+          imagePullPolicy: Always
           ports:
             - containerPort: 1398
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: payments-backend-svc
-spec:
-  selector:
-    app: payments-backend
-  ports:
-    - name: http
-      protocol: TCP
-      port: 1398
-      targetPort: 1398
